# dopamine

./: AxonSynapse.h  Brain.h  CMakeLists.txt  CognitiveSystem.h  DendriteSynapse.h  MemoryNeuron.h  MemorySystem.h  MotorNeuron.h  MotorSystem.h  Neuron.h  README.md  SensoryNeuron.h  SensorySystem.h  Synapse.h
app/: CMakeLists.txt  dopamine.cpp
include/: Axon.h  Brain.h  CognitiveSystem.h  Config.h  Dendrite.h  MemoryNeuron.h  MemorySystem.h  Neuron.h  SensoryNeuron.h  SensorySystem.h
share/: dopamine-config.json
src/: Axon.cpp  Brain.cpp  CMakeLists.txt  CognitiveSystem.cpp  Config.cpp  Dendrite.cpp  MemoryNeuron.cpp  MemorySystem.cpp  Neuron.cpp  SensoryNeuron.cpp  SensorySystem.cpp
